feat(Exc6): Добавил настройку параметра burst

--- a/Exc6/nginx.conf
+++ b/Exc6/nginx.conf
@@ -11,7 +11,7 @@ http {
         listen 80;
 
         location / {
-            limit_req zone=mylimit;
+            limit_req zone=mylimit burst=10;
             limit_req_status 429;
         
             proxy_pass http://backend_servers;
